--- a/processor/build.gradle
+++ b/processor/build.gradle
@@ -26,6 +26,8 @@ dependencies {
     testImplementation "org.spekframework.spek2:spek-dsl-jvm:$spekVersion"
     testRuntimeOnly "org.spekframework.spek2:spek-runner-junit5:$spekVersion"
     testImplementation "org.amshove.kluent:kluent:$kluentVersion"
+
+    testCompile "org.jooq:joor:0.9.12"
 }
 
 compileKotlin {
