--- a/processor/build.gradle
+++ b/processor/build.gradle
@@ -30,9 +30,16 @@ dependencies {
   testCompile "org.jooq:joor:0.9.12"
 }
 
+test {
+  useJUnitPlatform {
+    includeEngines "spek2"
+  }
+}
+
 compileKotlin {
   kotlinOptions.jvmTarget = "1.8"
 }
+
 compileTestKotlin {
   kotlinOptions.jvmTarget = "1.8"
 }
